# nordigen-homeassistant

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  const.py  hacs.json  info.md  manifest.json  pyproject.toml  renovate.json  sensor.py  setup.cfg  setup.py  sonar-project.properties
.devcontainer/: configuration.yaml
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: pr.yaml  sdlc.yaml
custom_components/nordigen/: __init__.py  config_flow.py  manifest.json  ng.py  sensor.py  strings.json
requirements/: requirements.txt
tests/: README.md  __init__.py  test_config_flow.py  test_init.py  test_integration.py  test_ng.py  test_sensors.py
