[metadata]
description-file = README.md

[tool:pytest]
addopts = --cov=custom_components/nordigen --cov-fail-under=100 --cov-report xml --cov-report html --cov-report term-missing --junitxml=pytest-report.xml
asyncio_mode = auto

[coverage:report]
fail_under = 100
skip_covered = True

[coverage:run]
relative_files=True

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
doctests = True
max_line_length = 120
max_complexity = 5
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202: No blank lines allowed after function docstring
# W504: line break after binary operator
# D10x: missing doc string
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    D100,D101,D102,D103,D104,D107

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 120
indent = "    "
not_skip = __init__.py
force_sort_within_sections = true
sections = FUTURE,STDLIB,INBETWEENS,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY
known_first_party = custom_components.nordigen,tests
combine_as_imports = true
no_lines_before = STDLIB,LOCALFOLDER
